--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 .DS_Store
+.vscode/
 
 /[Ll]ibrary/
 /[Tt]emp/
